--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2022-09-18" />
 
-<title>index</title>
+<title>MATH WORLD</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -363,17 +363,23 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">index</h1>
+<h1 class="title toc-ignore">MATH WORLD</h1>
 <h4 class="author">Ajay Karthick</h4>
 <h4 class="date">2022-09-18</h4>
 
 </div>
 
 
+<div id="probability-distributions" class="section level3">
+<h3>PROBABILITY DISTRIBUTIONS</h3>
 <p><a href="probability/bernoulli-distribution.html">Bernoulli
 Distribution</a><br />
 <a href="probability/binom_distribution.html">Binomial
-Distribution</a></p>
+Distribution</a><br />
+<a href="probability/geometric-distribution.html">Geometric
+Distribution</a><br />
+</p>
+</div>
 
 
 
