--- a/probability/geometric-distribution.html
+++ b/probability/geometric-distribution.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2022-09-18" />
 
-<title>geometric-distribution</title>
+<title>Geometric Distribution</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -363,7 +363,7 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">geometric-distribution</h1>
+<h1 class="title toc-ignore">Geometric Distribution</h1>
 <h4 class="author">Ajay Karthick</h4>
 <h4 class="date">2022-09-18</h4>
 
@@ -420,7 +420,7 @@ take is 1.</p>
 <pre class="r"><code>n=10
 p=0.4
 rgeom(n=n, prob=p)</code></pre>
-<pre><code>##  [1] 2 0 1 0 5 1 0 2 2 1</code></pre>
+<pre><code>##  [1] 0 2 4 1 4 0 0 2 1 0</code></pre>
 </div>
 <div id="dgeom" class="section level3">
 <h3>dgeom</h3>
