--- a/index.html
+++ b/index.html
@@ -372,6 +372,8 @@ pre code {
 
 <div id="probability-distributions" class="section level3">
 <h3>PROBABILITY DISTRIBUTIONS</h3>
+<div id="discrete-distributions" class="section level4">
+<h4>Discrete Distributions</h4>
 <p><a href="probability/bernoulli-distribution.html">Bernoulli
 Distribution</a><br />
 <a href="probability/binom_distribution.html">Binomial
@@ -381,6 +383,7 @@ Distribution</a><br />
 <a href="probability/poisson-distribution.html">Poisson
 Distribution</a><br />
 </p>
+</div>
 </div>
 
 
