--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@ Distribution</a><br />
 Distribution</a><br />
 <a href="probability/geometric-distribution.html">Geometric
 Distribution</a><br />
+<a href="probability/neg-binomial-distribution.html">Negative Binomial
+Distribution</a><br />
 <a href="probability/poisson-distribution.html">Poisson
 Distribution</a><br />
 </p>
